--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -14,7 +14,7 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
-        min-height: 17.5rem;
+        min-height: 20.5rem;
 
         @include breakpoints-up(medium){
         min-height: 25rem;
@@ -55,7 +55,7 @@
             width: 100%;
             height: 100%;
             background-image: url('../../images/ProductLed\ Method\ v4.png');
-            background-size: 93%;
+            background-size: 80%;
             background-repeat: no-repeat;
             background-position: center bottom;
       
